<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">称骨算命</string>
    <string name="form_name">名字:</string>
    <string name="form_name_default">人</string>
    <string name="form_sex">性别:</string>
    <string name="form_male">男</string>
    <string name="form_female">女</string>
    <string name="form_birthday">出生日期:</string>
    <string name="form_birthTime">出生时间:</string>
    <string name="form_dateType1">公历</string>
    <string name="form_dateType2">农历</string>
    <string name="form_submit">查询</string>
    <string name="form_return">&lt;&lt;返回</string>
    <string name="form_ok">确定</string>
    <string name="btn_txt_save">保存</string>
    <string name="btn_txt_replay">重测</string>
    <string name="btn_txt_ok">确定</string>
    <string name="btn_txt_cancel">取消</string>
    <string name="btn_txt_share">分享</string>
    <string name="form_year_str">年</string>
    <string name="form_month_str">月</string>
    <string name="form_day_str">日</string>
    <string name="form_hour_str">时</string>
    <string name="form_minute_str">分</string>
    <string name="txt_name_input_title">请输入名字</string>
    <string name="txt_name_input_success">记录保存成功！</string>
    <string name="menu_about">关于</string>
    <string name="menu_close">结束</string>
    <string name="msg_about">袁天罡称骨算命\n版本:1.32\n版本所有者:BT熊</string>
    <string name="result_peer_count_default">查询数据中...</string>
    <string name="result_peer_count">全世界有%1$d个人和你一样哦！</string>
    <string name="result_share_1">我的称骨结果是</string>
    <string name="result_share_2">对应的命运是</string>
    <string name="TianGan_0">甲</string>
    <string name="TianGan_1">乙</string>
    <string name="TianGan_2">丙</string>
    <string name="TianGan_3">丁</string>
    <string name="TianGan_4">戊</string>
    <string name="TianGan_5">己</string>
    <string name="TianGan_6">庚</string>
    <string name="TianGan_7">辛</string>
    <string name="TianGan_8">壬</string>
    <string name="TianGan_9">癸</string>
    <string name="DiZhi_0">子</string>
    <string name="DiZhi_1">丑</string>
    <string name="DiZhi_2">寅</string>
    <string name="DiZhi_3">卯</string>
    <string name="DiZhi_4">辰</string>
    <string name="DiZhi_5">巳</string>
    <string name="DiZhi_6">午</string>
    <string name="DiZhi_7">未</string>
    <string name="DiZhi_8">申</string>
    <string name="DiZhi_9">酉</string>
    <string name="DiZhi_10">戌</string>
    <string name="DiZhi_11">亥</string>
    <string name="ShengXiao_0">鼠</string>
    <string name="ShengXiao_1">牛</string>
    <string name="ShengXiao_2">虎</string>
    <string name="ShengXiao_3">兔</string>
    <string name="ShengXiao_4">龙</string>
    <string name="ShengXiao_5">蛇</string>
    <string name="ShengXiao_6">马</string>
    <string name="ShengXiao_7">羊</string>
    <string name="ShengXiao_8">猴</string>
    <string name="ShengXiao_9">鸡</string>
    <string name="ShengXiao_10">狗</string>
    <string name="ShengXiao_11">猪</string>
    <string name="result_m_22">身寒骨冷苦丁零，此命推来行岂人，碌碌巴巴无异日，终年打拱过平生。</string>
	<string name="result_m_23">此命推来骨自轻，求谋做事事难成，儿妻兄弟应难计，别处他乡做散人。</string>
	<string name="result_m_24">此命推来福禄无，门庭困难总难荣，六亲骨肉皆无靠，流到他乡作老翁。</string>
	<string name="result_m_25">此命推详祖业微，门庭营度似希奇，六亲骨肉冰如炭，一世勤老自把持。</string>
	<string name="result_m_26">平生衣禄苦中求，独自营谋事不休，离祖出门宜早计，晚年衣禄庶无忧。</string>
	<string name="result_m_27">一生做事少商量，难靠祖宗作主张，独马单枪空做去，早年晚岁总无长。</string>
	<string name="result_m_28">一生行事似飘蓬，祖宗产业在梦中，若不过房小名姓，也定移徒二三通。</string>
	<string name="result_m_29">初年运限本曾亭，纵有功名在后成，须到四旬方可立，移居小姓始方良。</string>
	<string name="result_m_30">忙忙碌碌苦中求，东奔西走何日休，苦系终身勤与俭，老来稍可免忧愁。</string>
	<string name="result_m_31">劳劳碌碌苦中求，何日云开见日头，难得祖基家可立，中年衣食渐能周。</string>
	<string name="result_m_32">初年运蹇事难谋，渐有财源如水流，到得中年衣食旺，那时名利一起收。</string>
	<string name="result_m_33">早年做事事难谋，百计勤劳枉用心，半世自如流水去，后来运至得黄金。</string>
	<string name="result_m_34">此命福气果如何，僧道门中衣禄多，离祖出家方为妙，终年拜佛念弥陀。</string>
	<string name="result_m_35">生命福量不周全，祖业根基觉少传，营事生涯宜守旧，时来衣食胜如前。</string>
	<string name="result_m_36">不须劳碌过平生，独自成家福不轻，早有福星常照命，任君行去百般成。</string>
	<string name="result_m_37">此命般般事不成，弟兄少力自孤行，虽然祖基须微有，来的明时去不明。</string>
	<string name="result_m_38">一身骨肉最清高，早入黉门姓名标，待到年将三十六，蓝衫脱去换红袍。</string>
	<string name="result_m_39">此命终生运不通，劳劳作事尽皆空，苦心皆力成家计，到得那时在梦中。</string>
	<string name="result_m_40">平生衣禄是绵长，件件心中自主张，前面风霞多受过，后来必定享安康。</string>
	<string name="result_m_41">此命推来自不同，为人能庸干异凡，中年还有逍遥福，不比年时运未通。</string>
	<string name="result_m_42">得宽怀处宽且怀，何用双眉皱不开，若使中年运命济，那时名利一起来。</string>
	<string name="result_m_43">为人心性最聪明，做事轩昂近贵人，衣禄一生天须定，不须劳碌是丰亨。</string>
	<string name="result_m_44">万事由天莫苦求，须知福禄赖人修，当年财帛难如意，晚年欣然便不忧。</string>
	<string name="result_m_45">名利推求竟若何，前番辛苦后奔波，命中难养男和女，骨肉扶持也不多。</string>
	<string name="result_m_46">东西南北尽皆通，出姓移居更觉隆，衣禄无穷天数定，中年晚景一般同。</string>
	<string name="result_m_47">此命推来旺未年，妻荣子贵自怡然，平生源有滔滔福，可卜财源若水源。</string>
	<string name="result_m_48">初年运道未曾通，几此蹉跎命亦定，兄弟六亲无依靠，一生事业晚来侵。</string>
	<string name="result_m_49">此命推来福不轻，自成自立显门庭，从来富贵人钦敬，使婢差奴过一生。</string>
	<string name="result_m_50">为名为利终日劳，中年福禄也多遭，老来自有才星照，不止前番目下高。</string>
	<string name="result_m_51">一世荣华事事通，不须劳碌自亨通，弟兄叔侄皆如意，家业成事福禄宏。</string>
	<string name="result_m_52">一世亨通事事能，不须劳苦自然宁，家族有光欣喜甚，家产成事福禄宏。</string>
	<string name="result_m_53">此命推来福泽宏，兴家立业在其中，一​​生衣食安排定，确实人间一富翁。</string>
	<string name="result_m_54">此格详来福泽宏，诗书满腹看功成，丰衣足食多安稳，正是人间有福人。</string>
	<string name="result_m_55">走马扬鞭争利名，少年做事费评论，一朝福禄源源至，富辅荣华显六亲。</string>
	<string name="result_m_56">此格推来礼仪通，一身福禄用无穷，甜酸苦辣皆尝过，滚滚财源和而丰。</string>
	<string name="result_m_57">福禄丰盈万事成，一身荣耀乐天年，名扬震威人争羡，处世逍遥宛天仙。</string>
	<string name="result_m_58">平生衣食自然来，名利双全富贵皆，金榜题名登甲等，紫袍玉带走金阶。</string>
	<string name="result_m_59">细推此格秀而清，必定才高学业成，甲第之中应有份，扬赫走马显威荣。</string>
	<string name="result_m_60">一朝金榜快题名，显祖荣宗大器成，衣禄定然无欠缺，田园财棉更丰盈。</string>
	<string name="result_m_61">不作朝中金榜客，定为世上大富翁，聪明天付经书熟，名显高科自是荣。</string>
	<string name="result_m_62">此命生来福不穷，读书必定显亲宗，紫衣金带为卿相，富贵荣华孰与同。</string>
	<string name="result_m_63">命中为官福禄长，得来富贵实非常，金榜雁塔传金榜，大显门庭天下扬。</string>
	<string name="result_m_64">此格威权不可当，紫袍金带坐高堂，荣华富贵谁能及，万古留名姓氏扬。</string>
	<string name="result_m_65">细推此命福非轻，富贵荣华孰与争，定国安邦人极品，威名显赫震寰瀛。</string>
	<string name="result_m_66">此格人间一福人，堆金积玉满堂春，从来富贵有天定，金榜题名更显荣。</string>
	<string name="result_m_67">此命生来福自宏，田园家业最高隆，平生衣禄盈丰足，衣禄荣华万事通。</string>
	<string name="result_m_68">富贵由天莫若求，万金家计不须谋，十年不比前番事，祖业根基千古留。</string>
	<string name="result_m_69">君是人间福禄星，一生富贵众人钦，总然衣禄由天定，安享荣华过一生。</string>
	<string name="result_m_70">此命推来福不轻，何须愁虑苦劳心，荣华富贵已天定，正芴垂绅拜紫寰。</string>
	<string name="result_m_71">此命生成大不同，公侯卿相在其中，一​​生自有逍遥福，富贵荣华极品隆!</string>
	<string name="result_f_21">生身此命运不通，乌云盖月黑朦胧，莫向故园载花木，可来幽地种青松。</string>
	<string name="result_f_22">女命孤冷独凄身，此身推来路乞人，操心烦恼难度日，一生痛苦度光阴。</string>
	<string name="result_f_23">女命生来轻薄人，营谋事作难称心，六亲骨肉亦无靠，奔走劳碌困苦门。</string>
	<string name="result_f_24">女命推来福禄无，治家艰难辛苦多，丈夫儿女不亲爱，奔走他乡作游姑。</string>
	<string name="result_f_25">此命一身八字低，家庭艰辛多苦妻，娘家亲友冷如炭，一生勤劳多忧眉。</string>
	<string name="result_f_26">平生依禄但苦求，两次配夫带忧愁，咸酸苦辣他偿过，晚年衣食本无忧。</string>
	<string name="result_f_27">此格做事单独强，难告夫君作主张，心问口来口问心，晚景衣禄宜自生。</string>
	<string name="result_f_28">女命生来八字轻，为善作事也无因，你把别人当亲生，别人对你假殷情。</string>
	<string name="result_f_29">花支艳来硬性身，自奔自力不求人，若问求财方可止，在苦有甜度光阴。</string>
	<string name="result_f_30">女命推来比郎强，婚姻大事碍无障，中年走过坎坷地，末年渐经行前强。</string>
	<string name="result_f_31">早年行运在忙头，劳碌奔波苦勤求，费力劳心把家立，后来晚景名忧愁。</string>
	<string name="result_f_32">时逢运来带吉神，从有凶星转灰尘，真变假来假成真，结拜弟妹当亲生。</string>
	<string name="result_f_33">初限命中有变化，中年可比树落花，勤俭持家难度日，晚年成业享荣华。</string>
	<string name="result_f_34">矮巴勾枣难捞枝，看破红尘最相宜，谋望求财空费力，婚姻三娶两次离。</string>
	<string name="result_f_35">女子走冰怕冰薄，出行交易受残霜，婚姻周郎休此意，官司口舌须相加。</string>
	<string name="result_f_36">忧悉常锁两眉间，家业挂心不等闲，从今以后防口角，任意行移不相关。</string>
	<string name="result_f_37">此命推来费运多，若作摧群受折磨，山路崎岖吊下耳，左插右安心难留。</string>
	<string name="result_f_38">凤鸣岐山四方扬，女命逢此大吉昌，走失夫君音信有，晚年衣禄财盈箱。</string>
	<string name="result_f_39">女命推来运未能，劳碌奔波一场空，好似俊鸟在笼锁，中年未限凄秋风。</string>
	<string name="result_f_40">目前月令运不良，千辛万苦受煎熬，女身受得多苦难，晚年福禄比密甜。</string>
	<string name="result_f_41">此命推来一般艰，女子为人很非凡，中年逍遥多自在，晚年更比中年超。</string>
	<string name="result_f_42">杜井破废已多年，今有泉水出来鲜，资生济竭人称美，中运来转喜安然。</string>
	<string name="result_f_43">推车靠涯道路通，女名求财也无穷，婚姻出配无阻碍，疾病口舌离身躬。</string>
	<string name="result_f_44">夜梦金银醒来空，立志谋业运不通，婚姻难成交易散，夫君趟失未见踪。</string>
	<string name="result_f_45">女命终身驳杂多，六亲骨肉不相助，命中男女都难养，劳碌辛苦还奔波。</string>
	<string name="result_f_46">孤舟行水离沙滩，离乡出外早过家，是非口舌皆无碍，婚姻合配紫微房。</string>
	<string name="result_f_47">时来运转喜开颜，多年枯木逢春花，枝叶重生多茂盛，凡人见得都赞夸。</string>
	<string name="result_f_48">一朵鲜花镜中开，看着极好取不来，劝你休把镜花想，此命推来主可癫。</string>
	<string name="result_f_49">一生为人福宏名，心兹随君显门庭，容貌美丽惹人爱，银钱富足万事成。</string>
	<string name="result_f_50">马氏太公不相和，好命逢此忧凝多，恩人无义反为仇，是非平地起风波。</string>
	<string name="result_f_51">肥羊一群入出场，防虎逢之把口张，适口充饥心欢喜，女命八字大吉昌。</string>
	<string name="result_f_52">顺风行舟扯起帆，上天又助一顺风，不用费力逍遥去，任意顺行大享通。</string>
	<string name="result_f_53">此命相貌眉目清，文武双全功名成，一生衣禄皆无缺，可算世上积福人。</string>
	<string name="result_f_54">运开满腹好文章，谋事求财大吉祥，出行交易多得稳，到处享通姓名扬。</string>
	<string name="result_f_55">发政旅仁志量高，女命求财任他乡，交舍婚姻多有意，无君出外有音耗。</string>
	<string name="result_f_56">明珠辉吐离埃来，女有口有清散开，走失郎君当两归，交易有成永无灾。</string>
	<string name="result_f_57">游鱼戏水被网惊，踊身变化入龙门，三根杨柳垂金钱，万朵桃花显价能。</string>
	<string name="result_f_58">此命推来转悠悠，时运未来莫强求，幸得今日重反点，自有好运在后头。</string>
	<string name="result_f_59">雨雪载途活泥泞，交易不安难出生，疾病还拉婚姻慢，谋望求财事难寻。</string>
	<string name="result_f_60">女命八字喜气和，谋事求财吉庆多，口舌渐消疾病少，夫君走别归老窠。</string>
	<string name="result_f_61">缘木求鱼事多难，虽不得鱼无害反，若是行险弄巧地，事不遂心枉安凡。</string>
	<string name="result_f_62">指日高升气象新，走失待人有信音，好命遇事遂心好，伺病口舌皆除根。</string>
	<string name="result_f_63">五官脱运难抬头，妇命须当把财求，交易少行有人助，一生衣禄不须愁。</string>
	<string name="result_f_64">俊鸟曾得出胧中，脱离为难显威风，一朝得意福力至，东南西北任意通。</string>
	<string name="result_f_65">女命推来福非轻，兹善为事受人敬，天降文王开基业，八百年来富贵门。</string>
	<string name="result_f_66">时来运转闺阁楼，贤德淑女君子求，击鼓乐之大吉庆，女命逢此喜悠悠。</string>
	<string name="result_f_67">乱丝无头定有头，碰得亲事暂折磨，交易出行无好处，谋事求财心不遂。</string>
	<string name="result_f_68">水底明月不可捞，女命早限运未高，交易出行难获利，未运终得渐见好。</string>
	<string name="result_f_69">太公封祖不非凡，女子求财稳如山，交易合伙多吉庆，疾病口角遗天涯。</string>
	<string name="result_f_70">本命推断喜气新，恰遇郎君金遂心，坤身来交正当运，富贵衣禄乐平生。</string>
	<string name="result_f_71">此命推来宏运交，不须再愁苦劳难，一生身有衣禄福，安享荣华胜班超!</string>
    <string name="result_detail_21">短命非业谓大空，平生灾难事重重；凶祸频临陷逆境，终世困苦事不成。</string>
	<string name="result_detail_22">身寒骨冷苦伶仃，此命推来行乞人；劳劳碌碌无度日，终年打拱过平生。</string>
	<string name="result_detail_23">不解释， 你懂的。</string>
	<string name="result_detail_24">不解释， 你懂的。</string>
	<string name="result_detail_25">不解释， 你懂的。</string>
	<string name="result_detail_26">此命为人性灵巧，胸襟通达。志气高强，少年勤学有功名，年青欠利。腹中多谋，有礼有义，有才有能做事勤俭。立业思抱子，一生福禄无亏，与人干事反为不美。亲朋戚友，四海春风，末限光辉门庭。见善不欺，逢恶不怕，事有始终，吉人天相，四海扬名成家立业，安然到老，高楼大厦，妻宫硬无刑，子媳三人，只有一子送终，寿元七十七，卒于风光之中。</string>
	<string name="result_detail_27">此命为人性纯，不刚不柔，心所无毒，做事有始有终，池塘鸳鸯寻食吃，易聚易散，骨肉六亲不得力，财帛风云，操心费力才及早，恨奋寒窗，原业破尽，重新白手成家，且过三十五，六方可成家立业，四十开外，行船逢顺风，五十岁安稳，末限滔滔事业兴，妻宫破配，子女伴架送终，寿元七十岁，卒于五月之中。</string>
	<string name="result_detail_28">此命为人多才能，心机灵巧，祖业凋零，离乡别境可成事业，兄弟多力，驳杂多端，为静处安然，出外有人敬重，可进四方之财，有贵人扶持，逢凶化吉，勤俭一生无大难，只是救人无功，恩中招怨，重义轻财，易聚易散，早年不能聚财，三十三方知艰难，凡事顺意，三十八。九。四十岁，称心如意，末限福如东海，寿比南山，只是妻宫有克，三子送终。寿元六十九，闯过八十一，卒于三月之中。</string>
	<string name="result_detail_29">此命为人性燥，心直口快，有才能，见善不欺，见恶不怕，兄弟六亲无力，量能宽大，但不能聚财，事有始终。自立家计，出外方好，初限二十二。三至二十四。五不遂，二十七。八有好运到，犹如枯木逢春，中限四十九有险，五十多来古镜重磨，明月两圆，五十六。七。八末限。明月又被云侵，交七十方走大运，妻宫小配怕刑，克子。寿元七十七卒于风光之中。</string>
	<string name="result_detail_30">此命为人多才多能，心机灵巧，祖业凋零离乡别境可成家立业，兄弟少力，驳杂多端，出外有贵人扶持，一生刑险，无大难，只是救人无功，恩中招怨，重义轻财，财帛易聚易散，早年不聚财，三十三方知艰难，万事如意，三十八。九。四十岁，如意称心，三子送终，寿元; 六十九，卒于三月之中。</string>
	<string name="result_detail_31">此命推来敬重双亲，有福有禄，六亲和睦，义气高强，少年勤学有功名，忠孝双全，心中无毒无贵则富，出外受人钦敬，四海闻名，老年荣华，限上无忧，一生安康，年青欠利，末限安享福禄。</string>
	<string name="result_detail_32">此命为人性急，灵巧无亏，初限能聚财，虚名虚利，财来财去，有败有兴，一生衣禄无亏，中限交来，渐渐称心，求谋顺利，出外有人恭敬，一身受贵，若要问其消息，重事业，兴家业旺，其年运到滔滔财源来。滚滚利丰盈，春光花自发，微风细雨生，四十六。七。八交末运，移花接木桂花香，夫妻偕老，寿元八十之外，子孙福禄荣昌，卒于腊月之中。</string>
	<string name="result_detail_33">此命为人性巧心灵，能假成真，口快心无，恩中招怨，君子钦敬，小人嫉妒，骨肉无援，志在四方，身心健康，前运乘荫少重树，中限轻财，大运交来，声明可望，万业焕新，名利振建，五人金石皆至，发须有心田，以后小事宜注意，才有子媳，寿元八十三，卒于三月之中。</string>
	<string name="result_detail_34">自成自立安享福至三十六至四十六，财不谋而自至，福不求而自得。有贵人助力，家康安宁，妻宫若要无刑，猪羊蛇不可配，龙虎马牛方得安，虽有二子，终身带暗方可，兄弟六亲如冰炭，在家不得安然，限初驳杂多端，劳碌奔波，不能聚财，常有忧虑，寿元七十八，卒于三月之中。</string>
</resources>